# vision-assisted-nav-sim

./: .gitignore  README.md  temp
.devcontainer/: devcontainer.json
docker/: Dockerfile
map_assets/: my_map.pgm
notebooks/: 3d_bb_analyze_vis copy.ipynb  3d_bb_analyze_vis.ipynb
notebooks/data/3d_bb_viz/: metadata.yaml
resources/maps/: map_house.pgm
ros2_ws/: frames_2026-02-17_22.17.07.gv  frames_2026-02-17_22.23.39.gv  frames_2026-02-17_22.31.45.gv
ros2_ws/src/demo_launcher/: package.xml
ros2_ws/src/demo_launcher/launch/: demo.launch.py
ros2_ws/src/gazebo11_plugin_actor_collision/: package.xml
ros2_ws/src/tbot/tbot_bringup/: CMakeLists.txt
ros2_ws/src/tbot/tbot_bringup/launch/: rviz2.launch.py
ros2_ws/src/tbot/tbot_control/: CMakeLists.txt  package.xml
ros2_ws/src/tbot/tbot_control/config/: teleop_ps5.yaml  twist_mux.yaml
ros2_ws/src/tbot/tbot_control/launch/: teleop_base.launch.py  teleop_joy.launch.py
ros2_ws/src/tbot/tbot_description/: CMakeLists.txt  package.xml
ros2_ws/src/tbot/tbot_description/config/: gazebo_control.yaml
ros2_ws/src/tbot/tbot_description/urdf/: accessories.urdf.xacro  ros2_control.urdf.xacro  tbot.gazebo  tbot.gazebo.xacro  tbot.urdf  tbot.urdf.xacro  tbot_wf.urdf  turtlebot3_waffle.urdf
ros2_ws/src/tbot/tbot_description/urdf/temp/: accessories.urdf.xacro  tbot.gazebo  tbot.urdf.xacro
ros2_ws/src/tbot/tbot_description/urdf/temp2/: tbot.urdf copy.xacro  tbot.urdf.xacro  tbot2.urdf.xacro  tbot22.urdf.xacro
ros2_ws/src/tbot/tbot_navigation/tbot_nav/: CMakeLists.txt
ros2_ws/src/tbot/tbot_navigation/tbot_nav/launch/: nav2.launch.py
ros2_ws/src/tbot/tbot_navigation/tbot_nav/map/: map_house.yaml
ros2_ws/src/tbot/tbot_navigation/tbot_nav/param/: tbot.yaml
ros2_ws/src/tbot/tbot_navigation/tbot_nav/rviz/: tbot_nav2_default.rviz
ros2_ws/src/tbot/tbot_navigation/tbot_nav2/: CMakeLists.txt
ros2_ws/src/tbot/tbot_navigation/tbot_nav2/launch/: nav2.launch.py
ros2_ws/src/tbot/tbot_navigation/tbot_nav2/map/: map_house_old.yaml
ros2_ws/src/tbot/tbot_navigation/tbot_nav2/param/: tbot copy 2.yaml  tbot copy.yaml  tbot.yaml
ros2_ws/src/tbot/tbot_navigation/tbot_nav_behavior/: package.xml  setup.py
ros2_ws/src/tbot/tbot_navigation/tbot_nav_behavior/tbot_nav_behavior/: perception_nav_node.py  vision_safety_clamp_node copy.py  vision_safety_clamp_node.py
ros2_ws/src/tbot/tbot_navigation/tbot_robot_localization/: package.xml
ros2_ws/src/tbot/tbot_navigation/tbot_robot_localization/launch/: ekf.launch.py
ros2_ws/src/tbot/tbot_navigation/tbot_robot_localization/param/: ekf.yaml
ros2_ws/src/tbot_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/tbot_gazebo/launch/: control_tbot.launch.py  robot_state_publisher.launch.py  sim.launch.py  spawn_tbot.launch.py  teleops_tbot.launch.py
ros2_ws/src/tbot_gazebo/models/tbot_wf/: model copy.sdf  model.sdf
ros2_ws/src/tbot_gazebo/urdf/temp/: tbot_wf.urdf  tbot_wf_old.urdf  tbot_wf_old2.urdf
ros2_ws/src/tbot_gazebo/worlds/: turtlebot3_actors_world.world  turtlebot3_house.world  turtlebot3_house_actors.world  turtlebot3_house_actors_dynamic.world
ros2_ws/src/vision_assisted_nav_sim/: CMakeLists.txt  package.xml
ros2_ws/src/vision_assisted_nav_sim/launch/: robot_state_publisher.launch.py  spawn_human.launch.py  tbot_gazebo_sim.launch.py
ros2_ws/src/vision_assisted_nav_sim/worlds/: tbot3_actors_world.world
ros2_ws/src/yolo_inference_ros/: setup.py
ros2_ws/src/yolo_inference_ros/yolo_inference_ros/: yolo_inference_node.py
scripts/: install_gz_fortress.sh  setup_env.sh
src/demo_launcher/: CMakeLists.txt  package.xml
src/demo_launcher/launch/: bringup_tbot.launch.py  demo.launch.py  start_sim.launch.py
src/gazebo11_plugin_actor_collision/: CMakeLists.txt  package.xml
src/gazebo11_plugin_actor_collision/env-hook/: gazebo_plugin_path.sh
src/tbot/tbot_bringup/: package.xml
src/tbot/tbot_control/: CMakeLists.txt  package.xml
src/tbot/tbot_control/config/: twist_mux.yaml
src/tbot/tbot_description/: CMakeLists.txt  package.xml
src/tbot/tbot_description/urdf/: tbot.urdf.xacro
src/tbot/tbot_nav2/: CMakeLists.txt  package.xml
src/tbot/tbot_navigation/tbot_nav/: package.xml
src/tbot/tbot_navigation/tbot_nav/launch/: nav2.launch.py
src/tbot/tbot_navigation/tbot_nav/map/: my_map.yaml
src/tbot/tbot_navigation/tbot_nav/rviz/: tbot_nav2.rviz
src/tbot/tbot_navigation/tbot_nav_behavior/: package.xml  setup.cfg  setup.py
src/tbot/tbot_navigation/tbot_nav_behavior/tbot_nav_behavior/: vision_safety_clamp_node copy.py
src/tbot/tbot_navigation/tbot_robot_localization/: CMakeLists.txt  package.xml
src/tbot_gazebo/: package.xml
src/tbot_gazebo/launch/: spawn_tbot.launch.py
src/tbot_gazebo/worlds/: turtlebot3_house_actors.world
src/vision_assisted_nav_sim/: CMakeLists.txt
src/vision_assisted_nav_sim/worlds/: actors_demo.world  tbot3_actors_world.world
src/yolo_inference_ros/: package.xml  setup.py
src/yolo_inference_ros/yolo_inference_ros/: yolo_inference_node copy.py
