<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo11_plugin_actor_collision</name>
  <version>1.0.0</version>
  <description>Gazebo plugin to enable collisions on animated actors (Gazebo 11 classic).</description>
  <maintainer email="trungnh.aitech@gmail.com">serene</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
