<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_assisted_nav_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="trungnh.aitech@gmail.com">serene</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>turtlebot3</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>turtlebot3_simulations</depend>
  <depend>turtlebot3_navigation</depend> -->

  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <!-- <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
