<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tbot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="trungnh.aitech@gmail.com">serene</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>twist_mux</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
