<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tbot_robot_localization</name>
  <version>0.0.0</version>
  <description>Launch and parameters for robot_localization EKF on TBot (odom + IMU fusion, 2D mode).</description>
  <maintainer email="trungnh.aitech@gmail.com">trungnh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
